fix: Resolve Swagger UI 500 error with comprehensive solution
🔍 Swagger 500 Error Resolution:

🛠️ Development Profile Solution:
- ✅ Created application-dev.properties with H2 in-memory database
- ✅ Added H2 dependency to pom.xml for local development
- ✅ Eliminated PostgreSQL dependency for Swagger testing
- ✅ Enabled H2 console for debugging (/h2-console)

📋 Simplified Configuration:
- ✅ Streamlined OpenApiConfig.java (removed problematic License config)
- ✅ Simplified server configuration
- ✅ Focused on essential OpenAPI features only

🏥 Health Check System:
- ✅ Created HealthController with comprehensive endpoints
- ✅ /api/health - Basic service status
- ✅ /api/status - Detailed system information
- ✅ /api/swagger-test - Swagger functionality test

🧪 Automated Testing:
- ✅ Created test-auth-service.sh script
- ✅ Automated service startup with H2 database
- ✅ Comprehensive endpoint testing
- ✅ Health, Swagger, and JWT validation tests

📚 Complete Documentation:
- ✅ SWAGGER-FIX-GUIDE.md with step-by-step solution
- ✅ Troubleshooting steps and expected results
- ✅ Multiple deployment options (local, dev, docker)

🎯 Solution Benefits:
- ✅ No Docker dependency for Swagger testing
- ✅ Fast startup with in-memory database
- ✅ Comprehensive debugging tools
- ✅ Automated validation and testing

Ready for Swagger UI testing without 500 errors!