@@ -3,7 +3,6 @@ package com.bankportal.authservice.config;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.info.Contact;
-import io.swagger.v3.oas.models.info.License;
 import io.swagger.v3.oas.models.servers.Server;
 import io.swagger.v3.oas.models.security.SecurityScheme;
 import io.swagger.v3.oas.models.security.SecurityRequirement;
@@ -11,7 +10,7 @@ import io.swagger.v3.oas.models.Components;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 public class OpenApiConfig {
@@ -25,18 +24,11 @@ public class OpenApiConfig {
                         .version("v1.0.0")
                         .contact(new Contact()
                                 .name("Bank Portal Development Team")
-                                .email("dev@bankportal.com")
-                                .url("https://github.com/bankportal/auth-service"))
-                        .license(new License()
-                                .name("MIT License")
-                                .url("https://opensource.org/licenses/MIT")))
-                .servers(List.of(
+                                .email("dev@bankportal.com")))
+                .servers(Arrays.asList(
                         new Server()
                                 .url("http://localhost:8081")
-                                .description("Development Server"),
-                        new Server()
-                                .url("https://api.bankportal.com")
-                                .description("Production Server")))
+                                .description("Development Server")))
                 .components(new Components()
                         .addSecuritySchemes("bearerAuth", new SecurityScheme()
                                 .type(SecurityScheme.Type.HTTP)
